chore: create a label in renovate PR

--- a/renovate.json
+++ b/renovate.json
@@ -2,6 +2,7 @@
   "extends": [
     "config:base"
   ],
+  "labels": ["renovate"],
   "schedule": ["after 9am on saturday"],
   "rangeStrategy": "bump"
 }
